<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3c</name>
  <version>0.0.0</version>
  <description>
    ROS packages for the Turtlebot3 Canonical(meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author>Jeremie Deray</author>
  <author email="jeremie.deray@canonical.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@canonical.com">Jeremie Deray</maintainer>
  <url type="repository">https://github.com/ubuntu-robotics/turtlebot3c</url>
  <url type="bugtracker">https://github.com/ubuntu-robotics/turtlebot3c/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_example</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend> -->
  <exec_depend>turtlebot3c_teleop</exec_depend>
  <export><metapackage/></export>
</package>
