<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3c_teleop</name>
  <version>0.0.0</version>
  <description>
    Provides teleoperation using keyboard for TurtleBot3 Canonical.
  </description>
  <license>APACHE 2.0</license>
  <author>Jeremie Deray</author>
  <author email="jeremie.deray@canonical.com">Jeremie Deray</author>
  <maintainer email="jeremie.deray@canonical.com">Jeremie Deray</maintainer>
  <url type="repository">https://github.com/ubuntu-robotics/turtlebot3c</url>
  <url type="bugtracker">https://github.com/ubuntu-robotics/turtlebot3c/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
